Reset counters for all language when reset translate settings.

When I reset translate settings,
(menu -> Settings -> Site settings -> Translate -> Reset)
The accepted/denied/ignored counters of all languages should
be reset to 0.

However, currently, only the counters of the languages in accept_languages_pref_ will be reset.

Accepted languages means "languages the user understands or does not want translated".

But Denied, Ignored, Accepted counters are for those languages user might not understand.  That's why some counters are not reset in that For-loop.

BUG=728930

Review-Url: https://codereview.chromium.org/2919313003
Cr-Commit-Position: refs/heads/master@{#482168}

Former-commit-id: c09df0ce5984176ea0590a779ab15c6ce54e4731